--- a/laudo.html
+++ b/laudo.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Formulário - Laudo Citopatológico</title>
 
+<!-- ✅ libs necessárias p/ gerar PDF com HTML -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
 <style>
   :root{
     --blue:#336699;
@@ -19,10 +23,9 @@
     font-family: Arial, sans-serif;
   }
 
-  /* ===== CONTROLES ===== */
   .controles{
-    position: static;            /* ✅ não fica mais no topo */
-    margin-top: 18px;            /* ✅ fica abaixo de tudo */
+    position: static;
+    margin-top: 18px;
     background:#fff;
     border:1px solid #000;
     padding:14px;
@@ -43,7 +46,6 @@
   .btn-print{ background:#28a745;color:#fff; }
   .btn-clear{ margin-top:10px;background:#eee; }
 
-  /* ===== FOLHA ===== */
   .folha{
     width: 210mm;
     min-height: 297mm;
@@ -55,7 +57,6 @@
     position:relative;
   }
 
-  /* ===== TELA (FORMULÁRIO) ===== */
   .titulo-laudo{
     text-align:center;
     font-weight:800;
@@ -132,7 +133,6 @@
     margin-top:6px;
   }
 
-  /* ===== OBSERVAÇÃO (TELA) ===== */
   .obs-wrap{
     margin-top:12px;
     background:#e9eff7;
@@ -158,7 +158,6 @@
     box-sizing:border-box;
   }
 
-  /* ===== PRINT (LAUDO COMPLETO) ===== */
   .print-only{ display:none; }
 
   .cab-paciente{
@@ -171,22 +170,20 @@
   .cab-left{ flex:1; }
   .cab-right{ min-width:220px; text-align:right; }
 
-  /* ✅ ALTERADO AQUI: rótulos PACIENTE / Nº DO EXAME */
   .cab-lbl{
-    font-size:12pt;              /* ✅ tamanho 12 */
-    font-weight:400;             /* ✅ sem negrito */
+    font-size:12pt;
+    font-weight:400;
     text-transform:uppercase;
-    font-family:"Arial Narrow", Arial, sans-serif; /* ✅ Arial Narrow */
+    font-family:"Arial Narrow", Arial, sans-serif;
   }
 
   .cab-nome, .cab-exame{
-  font-size:11.5pt;
-  font-weight:700;
-  text-transform:uppercase;
-  font-family:"Arial Narrow";
-  line-height:1.1;
-}
-
+    font-size:11.5pt;
+    font-weight:700;
+    text-transform:uppercase;
+    font-family:"Arial Narrow";
+    line-height:1.1;
+  }
 
   .cab-row2{
     margin-top:10px;
@@ -244,13 +241,12 @@
 
 <div class="folha">
 
-  <!-- =========================
-       ✅ TELA: SOMENTE PAINEL
-       ========================= -->
+  <!-- ========= TELA ========= -->
   <div class="no-print">
     <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
 
     <div class="painel">
+
       <!-- 1 -->
       <div class="sec">
         <div class="sec-title">1. Avaliação Pré Analítica</div>
@@ -328,35 +324,34 @@
           <div class="lbl">CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO:</div>
         </div>
         <div class="grupo">
-          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="— ESCAMOSAS: Possivelmente não neoplásicas (ASC-US)." value="ASC-US" onchange="atualizar()"> ESCAMOSAS (ASC-US)</label>
-          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="— ESCAMOSAS: Não se pode afastar lesão intra-epitelial de alto grau (ASC-H)." value="ASC-H" onchange="atualizar()"> ESCAMOSAS (ASC-H)</label>
-          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="— GLANDULARES: Possivelmente não neoplásicas." value="GLANDULARES: Possivelmente não neoplásicas" onchange="atualizar()"> GLANDULARES: Possivelmente não neoplásicas</label>
-          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="— GLANDULARES: Não se pode afastar alto grau." value="GLANDULARES: Não se pode afastar alto grau" onchange="atualizar()"> GLANDULARES: Não se pode afastar alto grau</label>
+          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="Escamosas: possivelmente não neoplásicas (ASC-US)" value="ASC-US" onchange="atualizar()"> ESCAMOSAS (ASC-US)</label>
+          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="Escamosas: não se pode afastar lesão intra-epitelial de alto grau (ASC-H)" value="ASC-H" onchange="atualizar()"> ESCAMOSAS (ASC-H)</label>
+          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="Glandulares: possivelmente não neoplásicas" value="GLANDULARES: Possivelmente não neoplásicas" onchange="atualizar()"> GLANDULARES: Possivelmente não neoplásicas</label>
+          <label><input type="radio" name="c" data-tit="CÉLULAS ATÍPICAS DE SIGNIFICADO INDETERMINADO" data-full="Glandulares: não se pode afastar alto grau" value="GLANDULARES: Não se pode afastar alto grau" onchange="atualizar()"> GLANDULARES: Não se pode afastar alto grau</label>
         </div>
 
         <div class="linha" style="margin-top:10px;">
           <div class="lbl">ATIPIAS EM CÉLULAS ESCAMOSAS:</div>
         </div>
         <div class="grupo">
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="— Lesão intra-epitelial de baixo grau (compreendendo efeito citopático pelo vírus HPV e neoplasia intra-epitelial cervical grau I - NIC I)." value="NIC I" onchange="atualizar()"> BAIXO GRAU (HPV / NIC I)</label>
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="— Lesão intra-epitelial de alto grau (NIC II e III)." value="NIC II / III" onchange="atualizar()"> ALTO GRAU (NIC II / III)</label>
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="— Carcinoma epidermóide invasor." value="Carcinoma" onchange="atualizar()"> Carcinoma epidermóide invasor</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="Lesão intra-epitelial de baixo grau (HPV / NIC I)" value="NIC I" onchange="atualizar()"> BAIXO GRAU (HPV / NIC I)</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="Lesão intra-epitelial de alto grau (NIC II e III)" value="NIC II / III" onchange="atualizar()"> ALTO GRAU (NIC II / III)</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS ESCAMOSAS" data-full="Carcinoma epidermóide invasor" value="Carcinoma" onchange="atualizar()"> Carcinoma epidermóide invasor</label>
         </div>
 
         <div class="linha" style="margin-top:10px;">
           <div class="lbl">ATIPIAS EM CÉLULAS GLANDULARES:</div>
         </div>
         <div class="grupo">
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="— Adenocarcinoma 'in situ'." value="Adenocarcinoma 'in situ'" onchange="atualizar()"> Adenocarcinoma "in situ"</label>
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="— Adenocarcinoma invasor, cervical." value="Adenocarcinoma cervical" onchange="atualizar()"> Adenocarcinoma invasor, cervical</label>
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="— Adenocarcinoma invasor, endometrial." value="Adenocarcinoma endometrial" onchange="atualizar()"> Adenocarcinoma invasor, endometrial</label>
-          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="— Adenocarcinoma invasor, SOE." value="Adenocarcinoma SOE" onchange="atualizar()"> Adenocarcinoma invasor, SOE</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="Adenocarcinoma in situ" value="Adenocarcinoma 'in situ'" onchange="atualizar()"> Adenocarcinoma "in situ"</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="Adenocarcinoma invasor, cervical" value="Adenocarcinoma cervical" onchange="atualizar()"> Adenocarcinoma invasor, cervical</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="Adenocarcinoma invasor, endometrial" value="Adenocarcinoma endometrial" onchange="atualizar()"> Adenocarcinoma invasor, endometrial</label>
+          <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="Adenocarcinoma invasor, SOE" value="Adenocarcinoma SOE" onchange="atualizar()"> Adenocarcinoma invasor, SOE</label>
         </div>
       </div>
 
     </div><!-- painel -->
 
-    <!-- Observação -->
     <div class="obs-wrap">
       <div class="obs-title">Observação:</div>
 
@@ -373,9 +368,7 @@
 
   </div><!-- /no-print -->
 
-  <!-- =========================
-       ✅ IMPRESSÃO: LAUDO COMPLETO
-       ========================= -->
+  <!-- ========= LAUDO (print-only) ========= -->
   <div class="print-only">
 
     <div class="cab-paciente">
@@ -419,7 +412,6 @@
 
     <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
 
-    <!-- PRINT AREA -->
     <div class="secao-print">
       <span class="tit-negrito">AVALIAÇÃO PRÉ-ANALÍTICA</span><br>
       <span class="tit-normal-caps">ADEQUABILIDADE DO MATERIAL:</span> <span id="p_adeq"></span><br>
@@ -460,15 +452,22 @@
 
 </div><!-- /folha -->
 
-<!-- ✅ BOTÕES ABAIXO DE TUDO -->
 <div class="controles no-print">
-  <button class="btn btn-print" onclick="window.print()">IMPRIMIR LAUDO</button>
+  <button class="btn btn-print" onclick="gerarPDF()">GERAR PDF</button>
   <button class="btn btn-clear" onclick="location.reload()">LIMPAR</button>
 </div>
 
 <script>
-  function onlyDigits(s){ return (s||"").replace(/\D/g,''); }
   function up(v){ return (v||"").toUpperCase().trim(); }
+
+  const STORAGE_KEY_ATIPIAS = "casos_positivos_atipias";
+
+  function sanitizeFileName(name){
+    return (name||"")
+      .replace(/[\\/:*?"<>|]/g, "")
+      .replace(/\s+/g, " ")
+      .trim();
+  }
 
   function setObsPrint(texto){
     const wrap = document.getElementById("obs_print_wrap");
@@ -491,7 +490,6 @@
 
   // ===== INIT DADOS DO SISTEMA PRINCIPAL =====
   const params = new URLSearchParams(window.location.search);
-
   const init = {
     paciente: up(params.get("paciente")),
     exame: up(params.get("exame")),
@@ -520,11 +518,10 @@
   document.getElementById("data_coleta_print").textContent = init.data_coleta;
   document.getElementById("nome_resp_print").textContent = init.responsavel;
 
-  // Observação inicial (se veio do sistema principal)
   document.getElementById("obs_texto").value = init.observacao;
   setObsPrint(init.observacao);
 
-  // Rodapé com data completa
+  // Rodapé data
   const hoje = new Date();
   const dia = hoje.getDate();
   const mes = hoje.toLocaleDateString("pt-BR",{month:"long"});
@@ -535,7 +532,6 @@
     const checksEpi = document.querySelectorAll('.epi:checked');
     const zonaSim = document.getElementById('zona_sim');
     const zonaNao = document.getElementById('zona_nao');
-
     if (checksEpi.length > 1) zonaSim.checked = true;
     else if (checksEpi.length === 1) zonaNao.checked = true;
 
@@ -569,18 +565,175 @@
     const concl = document.querySelector('input[name="c"]:checked');
     if(concl){
       const categoria = concl.getAttribute('data-tit');
-      const respostaTecnica = concl.getAttribute('data-full') || concl.value;
+      const sub = concl.getAttribute('data-full') || concl.value;
+
+      document.getElementById('p_tit_concl').textContent = (categoria || "CONCLUSÃO") + ":";
+
       if(concl.value === "NEGATIVO"){
-        document.getElementById('p_res_concl').textContent = respostaTecnica;
+        document.getElementById('p_res_concl').textContent = sub;
       }else{
-        document.getElementById('p_res_concl').textContent = categoria + ":\n" + respostaTecnica;
+        document.getElementById('p_res_concl').textContent = (sub || "").trim();
       }
+    }else{
+      document.getElementById('p_res_concl').textContent = "";
+      document.getElementById('p_tit_concl').textContent = "CONCLUSÃO:";
     }
+  }
+
+  function isCasoPositivoAtipias(){
+    const concl = document.querySelector('input[name="c"]:checked');
+    if(!concl) return false;
+    return concl.value !== "NEGATIVO";
+  }
+
+  function getResultadoFinalTexto(){
+    return (document.getElementById("p_res_concl")?.textContent || "").trim();
+  }
+
+  function salvarCasoPositivoNoStorage(payload){
+    const atual = JSON.parse(localStorage.getItem(STORAGE_KEY_ATIPIAS) || "[]");
+    atual.push({ ...payload, data: new Date().toISOString() });
+    localStorage.setItem(STORAGE_KEY_ATIPIAS, JSON.stringify(atual));
+  }
+
+  // ✅ export JSON exatamente como seu sistema laudos exporta
+  function gerarArquivoExportacao(payload){
+    const now = new Date();
+    const yyyy = now.getFullYear();
+    const mm = String(now.getMonth() + 1).padStart(2, "0");
+    const mesChave = `${yyyy}-${mm}`;
+    const key = `pacientes_${mesChave}`;
+
+    const registro = {
+      nome: `${payload.exame} ${payload.nome}`.trim(),
+      telefone: payload.telefone || "",
+      categoria: payload.categoria || "",
+      subcategoria: payload.subcategoria || ""
+    };
+
+    const exportJSON = {
+      [key]: JSON.stringify([registro])
+    };
+
+    const exameSeguro = (payload.exame || "").replaceAll("/", ".");
+    const nomeSafe = sanitizeFileName((payload.nome || "").toUpperCase());
+    const fileName = `${sanitizeFileName(exameSeguro)} ${nomeSafe} - EXPORT_${mesChave}.json`;
+
+    const blob = new Blob(
+      [JSON.stringify(exportJSON)],
+      { type: "application/json;charset=utf-8" }
+    );
+
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = fileName;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(a.href);
+  }
+
+  function limparEVoltarSistema(){
+    document.querySelectorAll('input[type="radio"]').forEach(r => r.checked = false);
+    document.querySelectorAll('input[type="checkbox"]').forEach(c => c.checked = false);
+
+    document.getElementById("obs_texto").value = "";
+    setObsPrint("");
+
+    document.getElementById("p_adeq").textContent = "";
+    document.getElementById("p_epi").textContent = "";
+    document.getElementById("p_zona").textContent = "";
+    document.getElementById("p_res_diag").textContent = "";
+    document.getElementById("p_res_micro").textContent = "";
+    document.getElementById("p_res_concl").textContent = "";
+
+    setTimeout(()=>history.back(), 250);
+  }
+
+  function nomeArquivoPDF(){
+    const exameOriginal = (init.exame || "").trim();
+    const nome = (init.paciente || "PACIENTE").trim().toUpperCase();
+    const exameSeguro = exameOriginal.replaceAll("/", ".");
+    return sanitizeFileName(`${exameSeguro} ${nome}.pdf`);
+  }
+
+  async function gerarPDF(){
+    atualizar();
+
+    const concl = document.querySelector('input[name="c"]:checked');
+    const categoria = concl?.getAttribute("data-tit") || "";
+    let subcategoria = concl?.getAttribute("data-full") || concl?.value || "";
+    subcategoria = (subcategoria || "").replace(/^—\s*/,"").trim();
+
+    // ✅ positivo -> salva e exporta no formato correto
+    if(isCasoPositivoAtipias()){
+      const payload = {
+        exame: init.exame,
+        nome: init.paciente,
+        telefone: init.telefone,
+        categoria,
+        subcategoria,
+        resultado: getResultadoFinalTexto()
+      };
+      salvarCasoPositivoNoStorage(payload);
+      gerarArquivoExportacao(payload);
+    }
+
+    const fileName = nomeArquivoPDF();
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF("p", "mm", "a4");
+
+    // clone do laudo e render fora da tela
+    const original = document.querySelector(".print-only");
+    const clone = original.cloneNode(true);
+
+    const sandbox = document.createElement("div");
+    sandbox.style.position = "fixed";
+    sandbox.style.left = "-99999px";
+    sandbox.style.top = "0";
+    sandbox.style.width = "210mm";
+    sandbox.style.background = "white";
+    sandbox.style.padding = "10mm";
+    sandbox.appendChild(clone);
+    document.body.appendChild(sandbox);
+
+    const canvas = await html2canvas(clone, {
+      scale: 2,
+      useCORS: true,
+      backgroundColor: "#ffffff"
+    });
+
+    const imgData = canvas.toDataURL("image/png");
+
+    const pageWidth = 210;
+    const pageHeight = 297;
+    const imgWidth = pageWidth;
+    const imgHeight = (canvas.height * imgWidth) / canvas.width;
+
+    let heightLeft = imgHeight;
+    let position = 0;
+
+    doc.addImage(imgData, "PNG", 0, position, imgWidth, imgHeight);
+    heightLeft -= pageHeight;
+
+    while (heightLeft > 0) {
+      position = heightLeft - imgHeight;
+      doc.addPage();
+      doc.addImage(imgData, "PNG", 0, position, imgWidth, imgHeight);
+      heightLeft -= pageHeight;
+    }
+
+    sandbox.remove();
+
+    doc.save(fileName);
+
+    limparEVoltarSistema();
   }
 
   window.atualizar = atualizar;
   window.setObsPrint = setObsPrint;
   window.aplicarObs = aplicarObs;
+  window.gerarPDF = gerarPDF;
 </script>
 
 </body>
